re #16 fixing horizontal scrollbar that happens if queries got a very long line with no break

--- a/code/media/com_debug/css/debug-default.css
+++ b/code/media/com_debug/css/debug-default.css
@@ -98,3 +98,9 @@
 .icon-32-storage span           { background-image: url(../images/icon-32-storage.png); }
 .icon-32-timeline span          { background-image: url(../images/icon-32-timeline.png); }
 /* @end */
+
+/* @group horizontal scrollbar fix */
+#debug .prettyprint {
+    white-space: pre-line;
+}
+/* @end */
